<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">StudentApp</string>
    <string name="login_action">Login</string>
    <string name="action_settings">Settings</string>
    <string name="action">Refresh</string>
    <string name="welcome">Welcome in StudentApp</string>
    <string name="action_about">About</string>
    <string name="sign_roll">Roll Number</string>
    <string name="pass">Password</string>
    <string name="title_activity_login">Login</string>
    <string name="login">Sign in</string>
    <string name="not_yet">Don\'t have account register now!</string>
    <string name="sign_up">Sign up</string>
    <string name="password">Password</string>
    <string name="email">E-mail</string>
    <string name="forgot">Forgot your password?</string>
    <string name="title_activity_signup">Signup</string>
    <string name="sign">Register</string>
    <string name="sign_name">Name</string>
    <string name="sign_email">E-mail</string>
    <string name="sign_mobile">Mobile</string>
    <string name="sign_pass">Password</string>
    <string name="sign_up_btn">Sign up</string>
    <string name="title_activity_otpsend">One time Password</string>
    <string name="otp_send">OTP</string>
    <string name="send_otp_btn">Send OTP</string>
    <string name="title_activity_image_selector">Avatar selector</string>
    <string name="title_section0">Select AVATAR</string>
    <string name="title_section1">Kid 1</string>
    <string name="title_section2">Kid 2</string>
    <string name="title_section3">Kid 3</string>
    <string name="title_section4">Kid 4</string>
    <string name="title_section5">Kid 5</string>
    <string name="title_section6">Kid 6</string>
    <string name="title_section7">Kid 7</string>
    <string name="title_section8">Kid 8</string>
    <string name="title_section9">Kid 9</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_detail">Student Detail</string>
    <string name="result">Result</string>
    <string name="title_activity_result">Result</string>
    <string name="sub1">Subject1</string>
    <string name="sub2">Subject2</string>
    <string name="sub3">Subject3</string>
    <string name="sub4">Subject4</string>
    <string name="sub5">Subject5</string>
    <string name="sub6">Subject6</string>
    <string name="total">Total</string>
    <string name="max">100</string>
    <string name="percentage">Percentage</string>
    <string name="disp_setting">Local Host IP Address</string>
    <string name="title_pref">Enter IP</string>
    <string name="summary_pref">Enter localhost IP running RESTful service</string>
    <string name="title_activity_settings">Settings</string>
</resources>
